requirements_txt.txt

--- a/AnivestPC/requirements_txt.txt
+++ b/AnivestPC/requirements_txt.txt
@@ -1,32 +1,98 @@
-# Anivest Desktop - Зависимости
-# UI Framework
+# Anivest Desktop - Зависимости для финальной версии
+
+# ===== ОСНОВНЫЕ ЗАВИСИМОСТИ =====
+
+# UI Framework (Материальный дизайн для Python)
 flet>=0.21.0
 
-# HTTP клиент для API запросов
+# HTTP клиент для API запросов  
 httpx>=0.26.0
 requests>=2.31.0
 
-# Асинхронность
-asyncio-mqtt>=0.16.0
+# ===== АСИНХРОННОСТЬ =====
 
-# Работа с изображениями и кешированием
-Pillow>=10.0.0
+# Асинхронные операции (встроенный в Python 3.7+)
+# asyncio - встроенный
 
-# Работа с JSON и датами
+# ===== РАБОТА С ДАННЫМИ =====
+
+# База данных SQLite (встроенный в Python)
+# sqlite3 - встроенный
+
+# Работа с JSON (встроенный)
+# json - встроенный
+
+# Работа с датами
 python-dateutil>=2.8.2
 
-# Логирование
-colorama>=0.4.6
+# ===== БЕЗОПАСНОСТЬ =====
 
 # Криптография для хеширования паролей
 bcrypt>=4.0.1
 
-# Встроенные модули (не требуют установки):
-# sqlite3 - База данных
-# json - Парсинг JSON
-# hashlib - Хеширование
-# datetime - Работа с датами
+# ===== ЛОГИРОВАНИЕ И ОТЛАДКА =====
+
+# Цветной вывод в консоль
+colorama>=0.4.6
+
+# ===== РАБОТА С ИЗОБРАЖЕНИЯМИ =====
+
+# Работа с изображениями для кеширования постеров
+Pillow>=10.0.0
+
+# ===== СИСТЕМНЫЕ УТИЛИТЫ =====
+
+# Работа с конфигурационными файлами
+configparser>=5.3.0
+
+# Прогресс-бары для загрузки
+tqdm>=4.66.0
+
+# ===== ДОПОЛНИТЕЛЬНЫЕ ЗАВИСИМОСТИ =====
+
+# Парсинг URL и работа с сетью
+urllib3>=2.0.0
+
+# Работа с временными зонами
+pytz>=2023.3
+
+# Валидация данных
+pydantic>=2.5.0
+
+# ===== РАЗРАБОТКА И ТЕСТИРОВАНИЕ (опционально) =====
+
+# Тестирование (для разработки)
+pytest>=7.4.0
+
+# Форматирование кода (для разработки)  
+black>=23.0.0
+
+# Линтинг (для разработки)
+flake8>=6.0.0
+
+# ===== ВСТРОЕННЫЕ МОДУЛИ (не требуют установки) =====
+# os - Работа с операционной системой
+# sys - Системные функции
+# pathlib - Работа с путями
 # logging - Логирование
-# os - Работа с файловой системой
 # time - Работа со временем
-# asyncio - Асинхронное программирование
+# datetime - Работа с датами
+# hashlib - Хеширование
+# re - Регулярные выражения
+# typing - Типизация
+# collections - Коллекции
+# functools - Функциональные утилиты
+# itertools - Итераторы
+# enum - Перечисления
+# dataclasses - Классы данных
+# abc - Абстрактные классы
+
+# ===== ПРИМЕЧАНИЯ =====
+# Для установки всех зависимостей выполните:
+# pip install -r requirements.txt
+#
+# Для режима разработки дополнительно установите:
+# pip install pytest black flake8
+#
+# Минимальная версия Python: 3.8+
+# Рекомендуемая версия Python: 3.10+
